# TrialCompiler

./: .env.example  .gitattributes  .gitignore  .tmp_package_audit.json  ARCHITECTURE.md  CONTRIBUTING.md  README.md  SECURITY.md  TrialCompiler_工科报告_6.4至结尾_Word版_修正版.docx  TrialCompiler_工科报告_6.4至结尾_正式稿.docx  pyproject.toml  report_工科章节完整版.md  report_工科章节待合并.md
.tmp_business_review/: extracted.txt  risk_quality.xps  test.xps  value_model.xps
apps/: README.md
benchmarks/: README.md
config/: README.md  llm.example.json  runtime.example.json
data/: README.md
docs/: 20260717_evening_handoff_zh.md  TrialCompiler_技术分析与原理研究笔记_20260718.md  TrialCompiler_项目完整参考文献.docx  attachment_package_review_20260717_zh.md  business_attachment_review_20260717_zh.md  business_research_evidence_audit_20260717_zh.md  cli_prototype_guide_zh.md  clinical_protocol_agent_benchmark_landscape_20260717_zh.md  competition_01_solution_overview_zh.md  competition_02_architecture_modules_zh.md  competition_03_core_innovations_zh.md  competition_solution_zh.md  competitor_analysis_integration_zh.md  data_processing_internal_plan_zh.md  detailed_solution_design_zh.md  feishu_aily_integration_zh.md  generative_protocol_workflow_zh.md  knowledge_base_collection_plan_zh.md  mathematical_technical_analysis_zh.md  medical_source_to_system_mapping_zh.md  medical_teammate_material_integration_zh.md  memory_retrieval_and_experience_reuse_zh.md  mvp_implementation_zh.md  nct04683926_adjusted_workflow_test_20260718_zh.md  nct04683926_full_workflow_test_20260718_zh.md  product_definition_zh.md  自然临床语义候选_专业核查包.md  (+13 more)
(+570 files in other folders)
