[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "trialcompiler"
version = "0.1.0"
description = "Evidence-grounded compiler and review workflow for clinical trial documents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "langgraph>=0.2",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pypdf>=5.0",
  "pytest>=8.0",
  "ruff>=0.7",
]

[project.scripts]
trialcompiler = "trialcompiler.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
